crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_constrained_fn_two_call_sites.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_constrained_fn_two_call_sites

trait Tag[k8] { tag(k8): l8 }
instance traits__multi_param_constrained_fn_two_call_sites.Tag[Int$$String] { tag=Tag$$Int$$String$$tag }
instance traits__multi_param_constrained_fn_two_call_sites.Tag[Bool$$String] { tag=Tag$$Bool$$String$$tag }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (h) -> Unit

fn f(v0: Dict[traits__multi_param_constrained_fn_two_call_sites.Tag, n8, s8], v1: n8) -> s8 =
  let v2: s8 = trait_call traits__multi_param_constrained_fn_two_call_sites.Tag.tag(v0, v1)
  v2

fn main() -> Unit =
  let v4: Dict[traits__multi_param_constrained_fn_two_call_sites.Tag, Int, String] = get_dict traits__multi_param_constrained_fn_two_call_sites.Tag[Int, String]
  let v3: String = call f(v4, 42)
  let v6: Dict[traits__multi_param_constrained_fn_two_call_sites.Tag, Bool, String] = get_dict traits__multi_param_constrained_fn_two_call_sites.Tag[Bool, String]
  let v5: String = call f(v6, true)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v8: Unit = call println(v7, v3)
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v9, v5)
  v10

fn Tag$$Int$$String$$tag(v11: Int) -> String =
  "int"

fn Tag$$Bool$$String$$tag(v12: Bool) -> String =
  "bool"
