crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_deferred.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_deferred

trait Convert[i8] { convert(i8): j8 }
instance traits__multi_param_deferred.Convert[Bool$$Int] { convert=Convert$$Bool$$Int$$convert }
instance traits__multi_param_deferred.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
instance traits__multi_param_deferred.Convert[Float$$String] { convert=Convert$$Float$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__multi_param_deferred.Convert, Bool, Int] = get_dict traits__multi_param_deferred.Convert[Bool, Int]
  let v2: Int = trait_call traits__multi_param_deferred.Convert.convert(v1, true)
  let v3: Dict[traits__multi_param_deferred.Convert, Int, String] = get_dict traits__multi_param_deferred.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_deferred.Convert.convert(v3, v2)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v4, v0)
  v5

fn Convert$$Bool$$Int$$convert(v6: Bool) -> Int =
  7

fn Convert$$Int$$String$$convert(v7: Int) -> String =
  "resolved"

fn Convert$$Float$$String$$convert(v8: Float) -> String =
  "float"
