crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_deferred_then_resolved.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_deferred_then_resolved

trait Convert[k8] { convert(k8): l8 }
instance traits__multi_param_deferred_then_resolved.Convert[Bool$$Int] { convert=Convert$$Bool$$Int$$convert }
instance traits__multi_param_deferred_then_resolved.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
instance traits__multi_param_deferred_then_resolved.Convert[Float$$String] { convert=Convert$$Float$$String$$convert }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn main() -> Unit =
  let v1: Dict[traits__multi_param_deferred_then_resolved.Convert, Bool, Int] = get_dict traits__multi_param_deferred_then_resolved.Convert[Bool, Int]
  let v2: Int = trait_call traits__multi_param_deferred_then_resolved.Convert.convert(v1, true)
  let v3: Dict[traits__multi_param_deferred_then_resolved.Convert, Int, String] = get_dict traits__multi_param_deferred_then_resolved.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_deferred_then_resolved.Convert.convert(v3, v2)
  ()

fn Convert$$Bool$$Int$$convert(v4: Bool) -> Int =
  0

fn Convert$$Int$$String$$convert(v5: Int) -> String =
  "i"

fn Convert$$Float$$String$$convert(v6: Float) -> String =
  "f"
