crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_hkt_param_ground.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_hkt_param_ground

type Box[x10] = Box#0(x10)
trait BoxConvert[o11] { box_convert(o11[p11]): p11 }
instance traits__multi_param_hkt_param_ground.BoxConvert[Box$$$Var0] { box_convert=BoxConvert$$Box$$$Var0$$box_convert }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Box[Int] = construct Box::Box#0(11)
  let v2: Dict[traits__multi_param_hkt_param_ground.BoxConvert, Box, Int] = get_dict traits__multi_param_hkt_param_ground.BoxConvert[Box, Int]
  let v3: Int = trait_call traits__multi_param_hkt_param_ground.BoxConvert.box_convert(v2, v1)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v4: Unit = call println(v0, v3)
  v4

fn BoxConvert$$Box$$$Var0$$box_convert(v5: Box[b12]) -> b12 =
  switch v5 {
    0 (v6: b12) ->
      v6
  }
