crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_hkt_two_ctors.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_hkt_two_ctors

type Box[x10] = Box#0(x10)
type Bag[y10] = Bag#0(y10)
trait BoxConvert[p11] { box_convert(p11[q11]): q11 }
instance traits__multi_param_hkt_two_ctors.BoxConvert[Box$$Int] { box_convert=BoxConvert$$Box$$Int$$box_convert }
instance traits__multi_param_hkt_two_ctors.BoxConvert[Bag$$Int] { box_convert=BoxConvert$$Bag$$Int$$box_convert }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Box[Int] = construct Box::Box#0(50)
  let v2: Dict[traits__multi_param_hkt_two_ctors.BoxConvert, Box, Int] = get_dict traits__multi_param_hkt_two_ctors.BoxConvert[Box, Int]
  let v0: Int = trait_call traits__multi_param_hkt_two_ctors.BoxConvert.box_convert(v2, v1)
  let v4: Bag[Int] = construct Bag::Bag#0(48)
  let v5: Dict[traits__multi_param_hkt_two_ctors.BoxConvert, Bag, Int] = get_dict traits__multi_param_hkt_two_ctors.BoxConvert[Bag, Int]
  let v3: Int = trait_call traits__multi_param_hkt_two_ctors.BoxConvert.box_convert(v5, v4)
  let v7: Int = add_int(v0, v3)
  let v6: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v8: Unit = call println(v6, v7)
  v8

fn BoxConvert$$Box$$Int$$box_convert(v9: Box[Int]) -> Int =
  switch v9 {
    0 (v10: Int) ->
      let v11: Int = add_int(v10, 1)
      v11
  }

fn BoxConvert$$Bag$$Int$$box_convert(v12: Bag[Int]) -> Int =
  switch v12 {
    0 (v13: Int) ->
      let v14: Int = add_int(v13, 2)
      v14
  }
