crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_partial_known.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_partial_known

trait Convert[a9] { convert(a9): b9 }
instance traits__multi_param_partial_known.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn main() -> Unit =
  let v1: Dict[traits__multi_param_partial_known.Convert, Int, String] = get_dict traits__multi_param_partial_known.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_partial_known.Convert.convert(v1, 42)
  ()

fn Convert$$Int$$String$$convert(v2: Int) -> String =
  "n"
