crates/ir/tests/ir/snapshots/main__ir__lower__traits__multi_param_resolve_concrete.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__multi_param_resolve_concrete

trait Convert[j11] { convert(j11): k11 }
instance traits__multi_param_resolve_concrete.Convert[Int$$String] { convert=Convert$$Int$$String$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn main() -> Unit =
  let v1: Dict[traits__multi_param_resolve_concrete.Convert, Int, String] = get_dict traits__multi_param_resolve_concrete.Convert[Int, String]
  let v0: String = trait_call traits__multi_param_resolve_concrete.Convert.convert(v1, 42)
  ()

fn Convert$$Int$$String$$convert(v2: Int) -> String =
  "n"
